[gd_scene load_steps=2 format=3 uid="uid://c0r2am6lalx7v"]

[ext_resource type="Script" uid="uid://c6pwtdv36lpm2" path="res://scripts/monitor.gd" id="1_gnqr3"]

[node name="Monitor" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 342.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gnqr3")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
offset_right = 342.0
offset_bottom = 54.0
current_tab = 1
clip_tabs = false

[node name="Accounts" type="MarginContainer" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_tab_index = 0

[node name="Content" type="VBoxContainer" parent="TabContainer/Accounts"]
layout_mode = 2

[node name="SearchSection" type="HBoxContainer" parent="TabContainer/Accounts/Content"]
layout_mode = 2

[node name="SearchBar" type="LineEdit" parent="TabContainer/Accounts/Content/SearchSection"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "Enter account ID"
emoji_menu_enabled = false
clear_button_enabled = true

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Accounts/Content"]
custom_minimum_size = Vector2(0, 325)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="SearchResults" type="RichTextLabel" parent="TabContainer/Accounts/Content/ScrollContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet"
fit_content = true

[node name="Policies" type="MarginContainer" parent="TabContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Policies"]
layout_mode = 2

[node name="Text" type="RichTextLabel" parent="TabContainer/Policies/ScrollContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
bbcode_enabled = true
text = "Lorem ipsum policies sit amet"
fit_content = true

[node name="System" type="MarginContainer" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_tab_index = 2

[node name="Text" type="RichTextLabel" parent="TabContainer/System"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
bbcode_enabled = true
text = "Lorem ipsum dolor system amet"
fit_content = true
